refacotring the hell out of this